Fixed top-action on smallest breakpoints.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,8 @@
 
 img.flag { opacity:0.3;height:36px; }
 
+.main>h3 { text-align: center; }
+
 /* Large desktop */
 /* @media (min-width: 1200px) { ... } */
 
@@ -30,5 +32,6 @@ img.flag { opacity:0.3;height:36px; }
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
+  .main>h3 { text-align: left; }
   .btn.top-action { top: 95px; }
 }
